# fast-api-introduction

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
api/: db.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
